notebook and readme text updates

--- a/ETL - Project.ipynb
+++ b/ETL - Project.ipynb
@@ -42,11 +42,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Movie metadata file from Kaggle\n",
+    "# 1st movie metadata file from Kaggle\n",
     "file1 = './Resources/movies_metadata.csv'\n",
     "\n",
-    "# Movie metadata file from Data.World; mostly used for Facebook likes\n",
-    "file_fb = './Resources/movie_metadata_dw.csv'"
+    "# 2nd movie metadata file from Kaggle; mostly used for Facebook likes\n",
+    "file_fb = './Resources/movie_metadata_fb.csv'"
    ]
   },
   {
@@ -37340,7 +37340,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
